# elm-mcp-v2

./: .gitignore  LICENSE  README.md  pyproject.toml  run_server.py
docs/: DESIGN.md
elm_mcp_v2/: __init__.py  hub.py  lint.py  server.py  update.py
