[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elm-mcp-v2"
dynamic = ["version"]
description = "Authoring/orchestration layer that federates IBM's engineering-ai-hub MCP server — one install, one login, hub correctness + elm-mcp's workflow tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brett Scharmett" }]
keywords = ["ibm", "elm", "doors-next", "mcp", "engineering-ai-hub", "facade"]

dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27",
]

[project.scripts]
elm-mcp-v2 = "elm_mcp_v2.server:cli"

[project.urls]
Homepage = "https://github.com/brettscharm/elm-mcp-v2"
Issues = "https://github.com/brettscharm/elm-mcp-v2/issues"

[tool.hatch.version]
path = "elm_mcp_v2/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["elm_mcp_v2"]
